--- a/pages/lapalette-dugout.html
+++ b/pages/lapalette-dugout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ohmyfood </title>
-    <link rel="stylesheet" href="../public/css/lpdg/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
     <meta name="description" content="Découvrez des menus qui vous conviennent dans des restaurants d'exception">
     <meta name="keywords" content="gastronomie, menu, restaurant, gastronomique, exception">
     <link rel="preconnect" href="https://fonts.gstatic.com">
