modif trait en css

--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
                         <figcaption>
                             <div class="heart">
                                 <h4>La palette du goût</h4>
-                                <div class="fill_heart">
-                                    <span><i class="fill far fa-heart fa-2x"></i></span>
-                                </div>
+                                <div class="restaurants__element-footer-icon">
+                                    <i class="far fa-heart unliked-icon"></i>
+                                    <i class="fas fa-heart liked-icon"></i>
+                                  </div>
                             </div>
                             <p>Ménilmontant</p>
                         </figcaption>
@@ -117,9 +118,10 @@
                         <figcaption>
                             <div class="heart">
                                 <h4>La note enchantée</h4>
-                                <div class="fill_heart">
-                                    <span><i class="fill far fa-heart fa-2x"></i></span>
-                                </div>
+                                <div class="restaurants__element-footer-icon">
+                                    <i class="far fa-heart unliked-icon"></i>
+                                    <i class="fas fa-heart liked-icon"></i>
+                                  </div>
                             </div>
                             <p>Charonne</p>
                         </figcaption>
@@ -137,9 +139,10 @@
                         <figcaption>
                             <div class="heart">
                                 <h4>A la française</h4>
-                                <div class="fill_heart">
-                                    <span><i class="fill far fa-heart fa-2x"></i></span>
-                                </div>
+                                <div class="restaurants__element-footer-icon">
+                                    <i class="far fa-heart unliked-icon"></i>
+                                    <i class="fas fa-heart liked-icon"></i>
+                                  </div>
                             </div>
                             <p>Cité Rouge</p>
                         </figcaption>
@@ -157,9 +160,10 @@
                         <figcaption>
                             <div class="heart">
                                 <h4>Le délice des sens</h4>
-                                <div class="fill_heart">
-                                    <span><i class="fill far fa-heart fa-2x"></i></span>
-                                </div>
+                                <div class="restaurants__element-footer-icon">
+                                    <i class="far fa-heart unliked-icon"></i>
+                                    <i class="fas fa-heart liked-icon"></i>
+                                  </div>
                             </div>
                             <p>Folie-Méricourt</p>
                         </figcaption>
