--- a/pages/lapalette-dugout.html
+++ b/pages/lapalette-dugout.html
@@ -29,9 +29,11 @@
     <div class="main_menu">
         <div class="menu_title">
             <h2>La palette du goût</h2>
-            <div class="fill_heart">
-                <span><i class="fill far fa-heart fa-2x"></i></span>
-            </div>
+            <div class="restaurants__element-footer-icon">
+                <i class="far fa-heart unliked-icon"></i>
+                <i class="fas fa-heart liked-icon"></i>
+              </div>
+
         </div>
 
         <div class="full_menu">
