--- a/pages/à-lafrancaise.html
+++ b/pages/à-lafrancaise.html
@@ -30,9 +30,10 @@
     <div class="main_menu">
         <div class="menu_title">
             <h2>À la française</h2>
-            <div class="fill_heart">
-                <span><i class="fill far fa-heart fa-2x"></i></span>
-            </div>
+            <div class="restaurants__element-footer-icon">
+                <i class="far fa-heart unliked-icon"></i>
+                <i class="fas fa-heart liked-icon"></i>
+              </div>
         </div>
         <div class="full_menu">
             <div class="starter">
