modif slash delicedessens

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                 <a href="pages/lapalette-dugout.html">
                     <figure>
-                        <img src="images\restaurants\lapalette_du_gout.jpg" alt="restaurant la palette du gout">
+                        <img src="images/restaurants/lapalette_du_gout.jpg" alt="restaurant la palette du gout">
                         <figcaption>
                             <div class="heart">
                                 <h4>La palette du goût</h4>
@@ -114,7 +114,7 @@
 
                 <a href="pages/la-noteenchantée.html">
                     <figure>
-                        <img src="images\restaurants\lanote_enchantee.jpg" alt="restaurant la note enchantee">
+                        <img src="images/restaurants/lanote_enchantee.jpg" alt="restaurant la note enchantee">
                         <figcaption>
                             <div class="heart">
                                 <h4>La note enchantée</h4>
@@ -135,7 +135,7 @@
 
                 <a href="pages/à-lafrancaise.html">
                     <figure>
-                        <img src="images\restaurants\ala_francaise.jpg" alt="restaurant a la francaise">
+                        <img src="images/restaurants/ala_francaise.jpg" alt="restaurant a la francaise">
                         <figcaption>
                             <div class="heart">
                                 <h4>A la française</h4>
@@ -156,7 +156,7 @@
 
                 <a href="pages/delice-dessens.html">
                     <figure>
-                        <img src="images\restaurants\ledelice_des_sens.jpg" alt="Restaurant Le délice des sens">
+                        <img src="images/restaurants/ledelice_des_sens.jpg" alt="Restaurant Le délice des sens">
                         <figcaption>
                             <div class="heart">
                                 <h4>Le délice des sens</h4>
