modif slach alafrancaise

--- a/pages/delice-dessens.html
+++ b/pages/delice-dessens.html
@@ -24,7 +24,7 @@
 <!-- Main -->
 <main class="main">
     <div class="header_img">
-        <img src="../images\restaurants\ledelice_des_sens.jpg" alt="menu delice des sens" title="ohmyfood menu delice des sens">
+        <img src="../images/restaurants/ledelice_des_sens.jpg" alt="menu delice des sens" title="ohmyfood menu delice des sens">
     </div>
     <div class="main_menu">
         <div class="menu_title">
