--- a/pages/à-lafrancaise.html
+++ b/pages/à-lafrancaise.html
@@ -25,7 +25,7 @@
 <!-- Main -->
 <main class="main">
     <div class="header_img">
-        <img src="../images\restaurants\ala_francaise.jpg" alt="menu a la francaise" title="ohmyfood menu a la francaise">
+        <img src="../images/restaurants/ala_francaise.jpg" alt="menu a la francaise" title="ohmyfood menu a la francaise">
     </div>
     <div class="main_menu">
         <div class="menu_title">
