--- a/pages/la-noteenchantée.html
+++ b/pages/la-noteenchantée.html
@@ -24,7 +24,7 @@
 <!-- Main  -->
 <main class="main">
     <div class="header_img">
-        <img src="../images\restaurants\lanote_enchantee.jpg" alt="menu note enchantée" title="ohmyfood menu note enchantee">
+        <img src="../images/restaurants/lanote_enchantee.jpg" alt="menu note enchantée" title="ohmyfood menu note enchantee">
     </div>
     <div class="main_menu">
         <div class="menu_title">
