modif slash lapalette du gout

--- a/pages/lapalette-dugout.html
+++ b/pages/lapalette-dugout.html
@@ -24,7 +24,7 @@
 <!-- Main -->
 <main class="menu_main">
     <div class="header_img">
-        <img src="../images\restaurants\lapalette_du_gout.jpg" alt="menu palette du gout" title="ohmyfood menu palette du gout">
+        <img src="../images/restaurants/lapalette_du_gout.jpg" alt="menu palette du gout" title="ohmyfood menu palette du gout">
     </div>
     <div class="main_menu">
         <div class="menu_title">
